add 100% vh and vw in sass

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<title></title>
+	<title>I.K. Aivazovsky gallery</title>
 </head>
 <body>
 	<div id="root">
-		<h1>I.K. Aivazovsky gallery</h1>
+		<!-- <h1>I.K. Aivazovsky gallery</h1> -->
 	</div>
 
 
